src/components/_navigationX.scss
// Main navigation
// this element is expected to be an <nav> wrapper
//
// @name Columns
// @group Layouts

.x-navX {
	width: 100%;
	@include flexbox(column, nowrap, center, stretch);
	// box-sizing: border-box;

	// es barra de navegacion principal
	//
	// @group Statuses
	&:not(.is__sub) {
		&:not(.is__relative) {
			z-index: 16;
		}
		&,
		.x-navX-wrapper {
			height: 5rem;
			transition: all 0.3s ease-out;
		}

		// tema de la barra de navegacion principal
		//
		// @group ConditionalModifiers
		&[class*="__tm-light"] {
			.x-navX-list-item {
				> *,
				> * > * {
					&.x-link:not(:hover):not(.is__active):not(.is__routeExact)[class*="__tm-light"] {
						text-shadow: 1px 1px 1px var(--sh, #{color(dark, 0.3)});
					}
					&.x-btnLink {
						&:not(:hover):not(.is__active):not(.is__routeExact) {
							@media (min-width: $viewportMd + 1) {
								text-shadow: 1px 1px 1px
									var(--sh, #{color(dark, 0.3)});
							}
						}
					}
					&.x-btn {
						&.is__active,
						&.is__routeExact {
							text-shadow: 1px 1px 1px
								var(--sh, #{color(dark, 0.3)});
						}
					}
				}
				&:hover > .toggle__dropdown,
				&:hover > .toggle__dropdown > * {
					&.x-link:not(:hover):not(.is__active):not(.is__routeExact)[class*="__tm-light"] {
						text-shadow: none;
					}
					&.x-btnLink {
						&:not(:hover):not(.is__active):not(.is__routeExact) {
							@media (min-width: $viewportMd + 1) {
								text-shadow: none;
							}
						}
					}
					&.x-btn {
						&.is__active,
						&.is__routeExact {
							text-shadow: none;
						}
					}
				}
			}
		}
		&.m__tm-lightAlt {
			--sh: #{color(primaryAlt, 0.7)};
		}
		// default theme
		&:not([class*="__tm"]),
		&.m__tm-secondary {
			> .x-navX-wrapper {
				background: color(light);
			}
			&:not(.is__relative) > .x-navX-wrapper {
				box-shadow: 0 0.5rem 2.4rem color(dark, 0.05);
			}
		}
	}

	// es barra de navegacion secundaria
	//
	// @group Statuses
	&.is__sub {
		position: absolute;
		left: 0;
		top: 100%;
		// margin: 0;
		height: 2.4rem;
		border-top: 2px solid transparent;
		border-bottom: 2px solid transparent;

		// tema de la barra de navegacion secundaria
		//
		// @group ConditionalModifiers
		&.m__tm-light .x-navX-list-item {
			> *,
			> * > * {
				&.x-link,
				&.x-btnLink {
					&:not(:hover):not(.is__active):not(.is__routeExact) {
						text-shadow: 1px 1px 1px var(--sh, #{color(dark, 0.3)});
					}
				}
			}
			&:hover > .toggle__dropdown,
			&:hover > .toggle__dropdown > * {
				&.x-link,
				&.x-btnLink {
					text-shadow: none;
				}
			}
		}
		&.m__tm-primaryAlt .x-navX-list-item {
			> *,
			> * > * {
				&.x-link,
				&.x-btnLink {
					&:hover,
					&.is__active,
					&.is__routeExact {
						text-shadow: 1px 1px 1px var(--sh, #{color(dark, 0.3)});
					}
				}
			}
			&:hover > .toggle__dropdown,
			&:hover > .toggle__dropdown > * {
				&.x-link,
				&.x-btnLink {
					text-shadow: 1px 1px 1px var(--sh, #{color(dark, 0.3)});
				}
			}
		}
		// default theme
		&:not([class*="__tm"]),
		&.m__tm-secondary {
			border-bottom-color: color(secondary, 0.05);
		}
	}
}

// Navigation wrapper
.x-navX-wrapper {
	&,
	> .x-holder {
		width: 100%;
		height: 100%;
		position: static;
		@include flexbox(row, nowrap, space-between, center);
	}
}

// Navigation nav list
// this element is expected to be an <ul> or <ol> list
ul.x-navX-list,
ol.x-navX-list {
	position: static;
	@include flexbox(row, nowrap, center, center);
	&,
	> * {
		&:not(:first-child) {
			margin-left: 1rem;
		}
	}
}

// Navigation nav list item
// this element is expected to be an <li> list item
li.x-navX-list-item {
	@include flexbox(column, nowrap, center, flex-start);
}

